--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: sans-serif;
-    background-color: lightgrey;
+    font-family: Ubuntu-title;
+    background-color: orange;
     margin-top: 75px;
 }
 
